tests/snapshots/run_wpt_conformance__trtx_prelu_float32_broadcast_4D_x_4D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu float32 broadcast 4D x 4D slope",
    "trtx",
    "PASS",
)
